# euro-office-lite

./: .gitattributes  .gitignore  .gitmodules  README.md  package-lock.json  package.json
.github/workflows/: build-linux-dev.yml  build-macos-dev.yml  build-windows-dev.yml  build.yml  compile-sdkjs.yml  extract-x2t-linux.yml  extract-x2t-macos.yml
docs/memory-benchmark/: ubuntu-results.md
flatpak/: org.eurooffice.Lite.desktop  org.eurooffice.Lite.metainfo.xml  org.eurooffice.Lite.xml  org.eurooffice.Lite.yml  org.eurooffice.flatpakrepo
repo/: config  euro-office-flatpak.gpg  summary  summary.idx  summary.idx.sig  summary.sig
repo/delta-indexes/+Q/: nCWT+OYeHDkvZ8Ro9p0yYzBj4lNm7zH+6MSg_lAvA.index
repo/summaries/: 111b7ec7f649e4fd9bf8c40e33e7f7098932d8bbc3170a0f6b4130be827fece4-4eafb65a4c29b9e6b674fc89e82f1dcbb44b82f65f0b5c648e0f86e46fe40377.delta  (+18 more)
scripts/: build-frontend-prod.mjs  compile-doctrenderer-sdkjs.sh  generate-font-sprite.py  generate-icons.sh  generate-sdk-bundle.sh  get-sdkjs-ci.sh  get-x2t-ci.ps1  get-x2t-ci.sh  get-x2t.ps1  package-x2t.ps1  prepare-dist.ps1  prepare-dist.sh  prepare-doctrenderer.sh  prepare-fonts.ps1  prepare-fonts.sh  setup.ps1  smoke-test-linux-pdf-bundle.sh  validate-frontend-prod.mjs
src/: bridge.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: AllFonts.js  DoctRenderer.config  native_shim.js
src-tauri/capabilities/: default.json  windows-printer.json
src-tauri/src/: bridge.rs  clipboard.rs  converter.rs  file_ops.rs  main.rs
src-tauri/templates/: blank.docx  blank.pptx  blank.xlsx
(+97 files in other folders)
