[package]
name = "euro-office-lite"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-printer-v2 = "0.2.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
