[package]
name = "euro-office-lite"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ureq = "3"
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }
[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-printer-v2 = "0.2.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
